--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <!-- <li class="ftco-animate normal-txt">Find me on  </li> -->
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/santosh-jadhavar-40a265281"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href=""><span class="icon-facebook"></span></a></li>
+					  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/santy__jadhavar/"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
